// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-pill-container should render as single line 1`] = `
<c-pill-container
  class="slds-pill_container"
>
  #shadow-root(open)
    <ul
      aria-label="Selected Options:"
      aria-orientation="horizontal"
      class="slds-listbox slds-listbox_horizontal slds-listbox_inline"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="0"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Avatar Pill
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
          <c-avatar
            class="slds-avatar slds-avatar_circle slds-avatar_x-small slds-pill__icon_container"
          >
            #shadow-root(open)
              <img
                alt="User avatar"
                src="/assets/images/avatar2.jpg"
                title="User avatar"
              />
          </c-avatar>
        </c-pill>
      </li>
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="-1"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Icon Pill
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
          <c-icon
            class="slds-icon-standard-account slds-pill__icon_container slds-icon_container"
          >
            #shadow-root(open)
              <c-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon"
                    data-key="account"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
              </c-primitive-icon>
              <span
                class="slds-assistive-text"
              >
                Account
              </span>
          </c-icon>
        </c-pill>
      </li>
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="-1"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Icon Pill Default
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
        </c-pill>
      </li>
    </ul>
</c-pill-container>
`;

exports[`c-pill-container should render when no items 1`] = `
<c-pill-container
  class="slds-pill_container"
>
  #shadow-root(open)
    <ul
      aria-label="Selected Options:"
      aria-orientation="horizontal"
      class="slds-listbox slds-listbox_horizontal"
      role="listbox"
      tabindex="0"
    />
</c-pill-container>
`;

exports[`c-pill-container should render with items 1`] = `
<c-pill-container
  class="slds-pill_container"
>
  #shadow-root(open)
    <ul
      aria-label="Selected Options:"
      aria-orientation="horizontal"
      class="slds-listbox slds-listbox_horizontal"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="0"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Avatar Pill
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
          <c-avatar
            class="slds-avatar slds-avatar_circle slds-avatar_x-small slds-pill__icon_container"
          >
            #shadow-root(open)
              <img
                alt="User avatar"
                src="/assets/images/avatar2.jpg"
                title="User avatar"
              />
          </c-avatar>
        </c-pill>
      </li>
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="-1"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Icon Pill
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
          <c-icon
            class="slds-icon-standard-account slds-pill__icon_container slds-icon_container"
          >
            #shadow-root(open)
              <c-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon"
                    data-key="account"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
              </c-primitive-icon>
              <span
                class="slds-assistive-text"
              >
                Account
              </span>
          </c-icon>
        </c-pill>
      </li>
      <li
        class="slds-listbox-item"
        role="presentation"
      >
        <c-pill
          aria-selected="true"
          class="slds-pill"
          role="option"
          tabindex="-1"
        >
          #shadow-root(open)
            <slot />
            <span
              class="slds-pill__label"
            >
              Icon Pill Default
            </span>
            <c-primitive-icon
              class="slds-icon_container slds-pill__remove"
              title="Remove"
            >
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small slds-icon-text-default"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Press delete or backspace to remove
            </span>
        </c-pill>
      </li>
    </ul>
</c-pill-container>
`;
